--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
     font-family: 'PT Sans','Playfair Display';
     font-size: 15px;
     color: #FFFFFF;
+    margin: 0%;
 }
 p{
     margin: 20px;
@@ -29,7 +30,7 @@ a{
     color: #FFFFFF;
 }
 .wrapper{
-width: 1460px;
+width: 80%;
 margin: auto;
 }
 
@@ -49,7 +50,8 @@ justify-content: space-between;
     background-color:  #0F0F0F;    
 }
 .head_menu{
-    display: flex;
+    display: grid;
+   grid-template-columns: 7fr 4fr 1fr;
     align-items: baseline;    
 }
 .logo{
@@ -61,13 +63,12 @@ letter-spacing: 0em;
 text-align: left;
 }
 .nav{
-    margin-left: 750px;
     display: flex;
     
 }
 .nav_item{
     margin-left: 40px;
-    
+    width: 130px;
     list-style-type: none;
 }
 .nav_item a{
@@ -75,13 +76,15 @@ text-align: left;
     text-decoration: none;
 }
 .head_cart_btn{
+    display: flex;
     margin-left: 60px;
 }
 #search{
     margin-left: 40px;
 }
 .first_screen{
-   
+    padding-bottom: 80px;
+   background-repeat: no-repeat;
     background-image: url(../img/ing_header.png);
 }
 .fs_logo{
@@ -125,7 +128,6 @@ line-height: 24px;
 text-align: center;
 text-transform: uppercase;
 max-width: 730px;
-padding-bottom: 100px;
 }
 .season20_21{
     display: flex;
@@ -262,3 +264,209 @@ font-family: 'PT Sans';
 font-style: normal;
 font-weight: 400;
 font-size: 14px;}
+@media (min-width: 1280px) {
+    .fs_logo{
+        padding-left: 360px;
+    }
+    .comp_desk{
+        padding-left: 160px;
+    }
+  .season20_21{
+    display: flex;
+    flex-flow: column-reverse;}
+    .new_collection{
+        width: 100%;
+        background-size: cover;
+        padding-top: 200px;
+    }
+    .new_butt{
+        margin-left: 560px;
+    }
+    .season21{
+       margin-bottom: 100px;
+        width: 100%;
+    }
+    .product_item{
+        margin-left: 150px;
+    }
+    .season18{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 150px;
+    }
+    .seaso18{
+       margin-top: -600px;
+    }
+    .img_2018{
+        width: 100%;
+        background-size: cover;
+    }
+    .season2018_desk{
+        margin-left: 70px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1150px) {
+    .fs_logo{
+        padding-left: 300px;
+    }
+    .comp_desk{
+        padding-left: 100px;
+    }
+  .season20_21{
+    display: flex;
+    flex-flow: column-reverse;}
+    .new_collection{
+        width: 100%;
+        background-size: cover;
+        padding-top: 200px;
+    }
+    .new_butt{
+        margin-left: 460px;
+    }
+    .season21{
+       margin-bottom: 100px;
+        width: 100%;
+    }
+    .product_item{
+        margin-left: 150px;
+    }
+    .season18{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 150px;
+    }
+    .seaso18{
+       margin-top: -600px;
+    }
+    .img_2018{
+        width: 100%;
+        background-size: cover;
+    }
+    .season2018_desk{
+        margin-left: 20px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .wrapper{
+        width: 100%;
+    }
+    .nav_item{
+        width: 100px;
+    }
+    .fs_logo{
+        padding-left: 35%;
+    }
+    .comp_desk{
+        padding-left: 10%;
+    }
+  .season20_21{
+    display: flex;
+    flex-flow: column-reverse;}
+    .new_collection{
+        width: 100%;
+        background-size: cover;
+        padding-top: 200px;
+    }
+    .new_butt{
+        margin-left: 42%;
+    }
+    .season21{
+       margin-bottom: 100px;
+        width: 100%;
+    }
+    .product_item{
+        margin-left: 150px;
+    }
+    .season18{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 150px;
+    }
+    .seaso18{
+       margin-top: -600px;
+    }
+    .img_2018{
+        width: 100%;
+        background-size: cover;
+    }
+    .season2018_desk{
+        margin-left: -11%;
+    }
+    .product_item{
+        margin-left: 3%;
+}
+}
+@media (min-width: 480px) and (max-width: 767px) {
+  
+    .wrapper{
+        width: 100%;
+    }
+    .nav{display: none;}
+    .nav_item{
+        width: 100px;
+    }
+    .fs_logo{
+        padding-left: 15%;
+        padding-top: 15%;
+    }
+    .comp_desk{
+        padding-top: 0%;
+        padding-left: 5%;
+        padding-bottom: 47%;
+    }
+  .season20_21{
+    display: flex;
+    flex-flow: column-reverse;}
+    .first_screen{
+        padding-bottom: 0;
+    }
+    .new_collection{
+        width: 100%;
+        background-size: cover;
+        padding-top: 200px;
+    }
+    .comp_desk p{
+        margin-bottom: 0%;
+    }
+    .new_butt{
+        margin-left: 42%;
+    }
+    .season21{
+       margin-bottom: 100px;
+        width: 100%;
+    }
+    .product_item{
+        margin-left: 150px;
+    }
+    .season18{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 150px;
+    }
+    .seaso18{
+       margin-top: -600px;
+    }
+    .img_2018{
+        width: 100%;
+        background-size: cover;
+    }
+    .season2018_desk{
+        width: 430px;
+        margin-left: -44%;
+    }
+    .product_item{
+        margin-left: 3%;
+    }
+    .footer{
+        grid-template-columns: 6fr 6fr;
+    }
+    .mailing_desk p{
+        margin-left: 0%;
+    }
+}
